# nev-brief

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: agent-6-first-delivery.md  agent-7-first-daily-run.md
infra/: docker-compose.yml
infra/supabase/: all_migrations.sql
ops/launchd/: README.md  com.nev.daily.plist  install-daily.sh  run-daily.sh
ops/windows/: README.md  install-scheduled-task.ps1  run-daily.ps1
scripts/debug/: debug_dongchedi.py  debug_html.py  debug_nav.py
tests/composer/: test_personalization.py  test_renderer.py  test_runner.py  test_sales_card.py  test_storage.py
tests/crawler/: test_adapters_api.py  test_adapters_html.py  test_adapters_rss.py  test_adapters_rsshub.py  test_rate_limiter.py  test_robots.py  test_runner.py  test_source_loader.py  test_storage.py
tests/integration/: test_composer_e2e.py  test_crawler_e2e.py  test_crawler_network.py  test_crawler_storage.py  test_foundation.py  test_pipeline_e2e.py  test_pipeline_perf.py  test_summarizer_e2e.py  test_summarizer_perf.py
tests/pipeline/: test_clustering.py  test_clustering_acceptance.py  test_deepseek_client.py  test_entity_accuracy.py  test_entity_dict.py  test_entity_extractor.py  test_runner.py  test_scoring.py  test_simhash.py  test_storage.py  test_text_cleaner.py  test_tokenizer.py
tests/summarizer/: test_candidates_builder.py  test_char_validator.py  test_cluster_aggregator.py  test_cluster_scoring.py  test_deepseek_summarizer.py  test_runner.py  test_sales_accuracy.py  (+3 more)
(+18 files in other folders)
